@@ -80,19 +80,17 @@ class CDbLogRoute extends CLogRoute
 		$db=$this->getDbConnection();
 		$db->setActive(true);
 
-		$sql="SELECT * FROM {$this->logTableName} WHERE 0=1";
-		try
+		if($this->autoCreateLogTable)
 		{
-			$db->createCommand($sql)->execute();
-		}
-		catch(Exception $e)
-		{
-			// The log table does not exist
-			if($this->autoCreateLogTable)
+			$sql="DELETE FROM {$this->logTableName} WHERE 0=1";
+			try
+			{
+				$db->createCommand($sql)->execute();
+			}
+			catch(Exception $e)
+			{
 				$this->createLogTable($db,$this->logTableName);
-			else
-				throw new CException(Yii::t('yii','CDbLogRoute requires database table "{table}" to store log messages.',
-					array('{table}'=>$this->logTableName)));
+			}
 		}
 	}
 
@@ -115,7 +113,7 @@ class CDbLogRoute extends CLogRoute
 CREATE TABLE $tableName
 (
 	$logID,
-	level INTEGER,
+	level VARCHAR(128),
 	category VARCHAR(128),
 	logtime INTEGER,
 	message TEXT
